--- a/src/css/default/recoverpassword.css
+++ b/src/css/default/recoverpassword.css
@@ -1,5 +1,6 @@
-#recoverpasswordform-logo {
-  float:                  left;
+#recoverpasswordform_logo {
+  max-width:              30em;
+  max-height:             20vh;
 }
 
 div.recoverpasswordform {
@@ -75,6 +76,7 @@ dl.recoverpasswordform {
 
   #recoverpasswordform_logo {
     margin: 1em;
+    max-width: calc(90vw - 2em);
   }
 
   .recoverpasswordform dt {
